# CDIO2

./: ARCHITECTURE.md  README.md  pyproject.toml
samples/: requests.jsonl
src/rce_guard/: __init__.py  cli.py  engine.py  models.py  notifiers.py  parsers.py  rules.py  server.py
tests/: test_engine.py  test_notifiers.py  test_server.py
